cheapStepper Library altered

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,5 +16,5 @@ upload_port = COM3
 monitor_port = COM3
 monitor_speed = 115200
 lib_deps = 
-	tyhenry/CheapStepper@^0.2.1
+;	tyhenry/CheapStepper@^0.2.1
 	treboada/Ds1302@^1.0.3
